[package]
name = "my_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
openssl-sys = "0.9"
openssl = "0.10"
hex = "0.4.3"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "my_benchmark"
harness = false

