[package]
name = "learn_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "my_benchmark"
harness = false

